--- a/Template/styles/category.css
+++ b/Template/styles/category.css
@@ -40,7 +40,7 @@
     }
 
     .category-panel-head-grid-items-view-listviewtext {
-        @apply text-indigo-600 sm:mr-0 invisible lg:visible mb-2 lg:mb-0 ml-1 lg:mr-4;
+        @apply text-indigo-600 sm:mr-0 invisible lg:visible mb-2 lg:mb-0 ml-1 lg:mr-4 dark:text-purple-400;
     }
 
     .category-panel-head-grid-items-products {
